# SDL2-EnTT-gameFR

./: CMakeLists.txt  README.md
libs/tinytmx/lib/include/: tinytmxDataChunkTile.hpp
src/: main.cpp
src/assets/maps/: SecondLevel.tmx
src/components/: blobMenu.hpp  direction.hpp  enemy.hpp  player.hpp  state.hpp  texture.hpp  transform.hpp
src/core/: app.cpp  app.hpp  constants.hpp  factories.cpp  factories.hpp  game.cpp  game.hpp
src/systems/: blobMenuPosition.cpp  blobMenuPosition.hpp  blobMenuRender.cpp  blobMenuRender.hpp  enemySliderPosition.cpp  enemySliderPosition.hpp  enemySlimeRender.cpp  enemySlimeRender.hpp  movement.cpp  movement.hpp  render.cpp  render.hpp  tileRender.cpp  tileRender.hpp
src/util/: camera.cpp  camera.hpp  collision.hpp  collision_manager.cpp  collision_manager.hpp  cute_math2d.h  dt.hpp  frame_cap.hpp  input_handler.cpp  input_handler.hpp  pos.hpp  sdl_check.hpp  texture_manager.cpp  texture_manager.hpp
src/util/font/: font.cpp  font.hpp
src/util/gameStates/: GameState.hpp  GameStateMachine.cpp  GameStateMachine.hpp  MainMenuState.cpp  MainMenuState.hpp  PlayState.cpp  PlayState.hpp
